# fake-akv

./: .dockerignore  .gitignore  README.md  dockerfile  pyproject.toml
.github/workflows/: pr.yml  release.yml
dotnet-tests/: README.md
dotnet-tests/FakeAkv.IntegrationTests/: FakeAkv.IntegrationTests.csproj  SecretLifecycleTests.cs  TestingCredentials.cs
src/fake_akv/: main.py  models.py  storage.py  utils.py
tests/: conftest.py  test_secrets_sdk_integration.py
